# bfetch

./: Dockerfile  docker_run.sh  pyproject.toml
bfetch/: .env  main.py  old.py  run_tests.sh
bfetch/modules/: arguments.py  browser_init.py  button_finder.py  config.py  downloader.py  filehandler.py  filetree.py  general_tree.py  head_request.py  html_parser.py  interactions.py  utils.py
bfetch/tests/: test_browser.py  test_parsing.py  test_tree.py
bfetch/tests/files/: complicated_dictionary.json  files_and_folder.html
bfetch/tests/test_browser_init/: test_browser.py
bfetch/tests/test_filehandler/: test_filehandler.py
bfetch/tests/test_filetree/: test_node.py  test_transform.py  test_tree.py
bfetch/tests/test_html_parser/: test_parsing.py
bfetch/tests/test_utils/: test_utils.py
