[tool.poetry]
name = "bfetch"
version = "0.1.0"
description = ""
authors = ["Antoine Carnec <antoinecarnec@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
selenium = "^3.141.0"
randomua = "^0.0.7"
bs4 = "^0.0.1"
ipython = "^7.20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
pylama = "^7.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
