[tool.poetry]
name = "bfetch"
version = "0.1.0"
description = ""
authors = ["Antoine Carnec <antoinecarnec@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
selenium = "^3.141.0"
randomua = "^0.0.7"
bs4 = "^0.0.1"
ipython = "^7.20.0"
pytest = "^6.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
